# r2d2

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Gemfile  Makefile  README.md  ideas.md  mix.exs  shell.nix
apps/repl/: .gitignore  README.md  mix.exs
apps/repl/lib/: repl.ex
apps/store/: mix.exs
apps/store/lib/: store.ex
apps/store/lib/lsm/: C0.ex  C1.ex  Lsm.ex  Supervisor.ex  Wal.ex
apps/store/lib/lsm/C1/: Supervisor.ex
apps/store/lib/lsm/Wal/: File.ex
apps/store/lib/node/: Supervisor.ex
apps/store/test/lsm/: c0_test.exs
config/: config.exs  dev.exs
examples/: lsm-simple.rs
lib/: r2d2.rb
src/: engine.rs  lib.rs  server.rs
src/client/: repl.rs
src/client/cli/command/: repl.rs
src/client/repl/: command.rs  command_parser.rs
src/engine/: configuration.rs  default.rs  directories.rs  key.rs  mod.rs  storage.rs  value.rs
src/engine/storage/: lsm.rs
src/engine/storage/lsm/: binary_io.rs  commit_log.rs  configuration.rs  memtable.rs  mod.rs  sstable.rs  wal.rs
src/engine/storage/lsm/commit_log/: backing_store.rs
src/engine/storage/lsm/wal/: reader.rs  serialization.rs  writer.rs
tests/: backing_store_integration.rs  commit_log_integration.rs  engine_integration.rs  lsm_integration.rs  sstable_integration.rs  utils.rs  wal_integration.rs
