[package]
name = "r2d2"
version = "0.1.0"
authors = ["certainty <david.krentzlin@gmail.com>"]
edition = "2018"

[lib]
name="r2d2_lib"
path="src/lib.rs"

[dependencies]
nom = "4.2.3"
rustyline = "3.0.0"
termion = "1.5.1"
log = "0.4.6"
env_logger = "0.6.1"
serde = { version = "1.0.91", features = ["derive"]}
bincode = "1.1.4"
clap = "2.33.0"
itertools = "0.8"
skiplist = "0.2.10"
byteorder = "1.3.1"

[dev-dependencies]
simulacrum = "0.3.1"
tempfile = "3.0.8"